syntax = "proto3";

option java_multiple_files = true;

package com.role_power.grpc;

message RP{
    int32 id=4;

    int32 role_id=1;

    int32 power_id=2;
}

message RPRequest{
    int32 id=4;

    int32 role_id=1;

    int32 power_id=2;

    repeated RP rp=5;
}

message RPResponse{
    int32 id=4;

    int32 role_id=1;

    int32 power_id=2;

    repeated RP rp=5;

    int32 status_id=6;
    
}

service RPService{
    rpc listRP(RPRequest) returns (RPResponse);
    rpc addRP(RPRequest) returns (RPResponse);
    rpc removeRP(RPRequest) returns (RPResponse);
    rpc modifyRP(RPRequest) returns (RPResponse);
}